--- a/index.html
+++ b/index.html
@@ -1511,74 +1511,74 @@ div.tocify {
 <h1>LICH</h1>
 <div id="wednesdays-200" class="section level2">
 <h2>Wednesdays 2:00</h2>
-<p>[Session 1 4/8/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 2 4/15/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 3 4/22/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 4 4/29/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 5 5/6/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 6 5/13/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 7 5/20/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 8 5/27/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 9 6/3/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
+<p><a href="https://zoom.us/j/3094028153">Session 1: 4/8/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 2: 4/15/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 3: 4/22/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 4: 4/29/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 5: 5/6/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 6: 5/13/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 7: 5/20/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 8: 5/27/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 9: 6/3/20</a></p>
 </div>
 </div>
 <div id="hehe" class="section level1">
 <h1>HEHE</h1>
 <div id="thursdays-300" class="section level2">
 <h2>Thursdays 3:00</h2>
-<p>[Session 1 4/9/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 2 4/16/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 3 4/23/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 4 4/30/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 5 5/7/30] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 6 5/14/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 7 5/21/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 8 5/28/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 9 6/4/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
+<p><a href="https://zoom.us/j/3094028153">Session 1: 4/9/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 2: 4/16/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 3: 4/23/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 4: 4/30/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 5: 5/7/30</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 6: 5/14/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 7: 5/21/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 8: 5/28/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 9: 6/4/20</a></p>
 </div>
 </div>
 <div id="prge" class="section level1">
 <h1>PRGE</h1>
 <div id="wednesdays-400" class="section level2">
 <h2>Wednesdays 4:00</h2>
-<p>[Initial Consult 4/8/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 2 4/15/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 3 4/22/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 4 4/29/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 5 5/6/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 6 5/13/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 7 5/20/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 8 5/27/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 9 6/3/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
+<p><a href="https://zoom.us/j/3094028153">Initial Consult: 4/8/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 2: 4/15/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 3: 4/22/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 4: 4/29/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 5: 5/6/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 6: 5/13/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 7: 5/20/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 8: 5/27/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 9: 6/3/20</a></p>
 </div>
 </div>
 <div id="drkat" class="section level1">
 <h1>DRKAT</h1>
 <div id="thursdays-100" class="section level2">
 <h2>Thursdays 1:00</h2>
-<p>[Initial Consult 4/9/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 2 4/16/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 3 4/23/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 4 4/30/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 5 5/7/30] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 6 5/14/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 7 5/21/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 8 5/28/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 9 6/4/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
+<p><a href="https://zoom.us/j/3094028153">Initial Consult: 4/9/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 2: 4/16/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 3: 4/23/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 4: 4/30/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 5: 5/7/30</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 6: 5/14/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 7: 5/21/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 8: 5/28/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 9: 6/4/20</a></p>
 </div>
 </div>
 <div id="chmar" class="section level1">
 <h1>CHMAR</h1>
 <div id="thursdays-1100" class="section level2">
 <h2>Thursdays 11:00</h2>
-<p>[Initial Consult 4/16/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 2 4/23/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 3 4/30/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 4 5/7/30] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 5 5/14/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 6 5/21/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 7 5/28/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
-<p>[Session 8 6/4/20] (<a href="https://zoom.us/j/3094028153" class="uri">https://zoom.us/j/3094028153</a>)</p>
+<p><a href="https://zoom.us/j/3094028153">Initial Consult: 4/16/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 2: 4/23/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 3: 4/30/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 4: 5/7/30</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 5: 5/14/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 6: 5/21/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 7: 5/28/20</a></p>
+<p><a href="https://zoom.us/j/3094028153">Session 8: 6/4/20</a></p>
 </div>
 </div>
 
