--- a/index.html
+++ b/index.html
@@ -1507,78 +1507,67 @@ div.tocify {
 </div>
 
 
-<div id="lich" class="section level1">
-<h1>LICH</h1>
-<div id="wednesdays-200" class="section level2">
-<h2>Wednesdays 2:00</h2>
-<p><a href="https://zoom.us/j/3094028153">Session 1: 4/8/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 2: 4/15/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 3: 4/22/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 4: 4/29/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 5: 5/6/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 6: 5/13/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 7: 5/20/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 8: 5/27/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 9: 6/3/20</a></p>
+<div id="lich" class="section level2">
+<h2>LICH</h2>
+<div id="wednesdays-200" class="section level3">
+<h3>Wednesdays 2:00</h3>
+<p><a href="https://zoom.us/j/600116955">Zoom Link</a></p>
+<div id="sesion-dates" class="section level4">
+<h4>Sesion Dates</h4>
+<ul>
+<li>Apr 8, 2020 02:00 PM</li>
+<li>Apr 15, 2020 02:00 PM</li>
+<li>Apr 22, 2020 02:00 PM</li>
+<li>Apr 29, 2020 02:00 PM</li>
+<li>May 6, 2020 02:00 PM</li>
+<li>May 13, 2020 02:00 PM</li>
+<li>May 20, 2020 02:00 PM</li>
+<li>May 27, 2020 02:00 PM</li>
+<li>Jun 3, 2020 02:00 PM</li>
+</ul>
 </div>
 </div>
-<div id="hehe" class="section level1">
-<h1>HEHE</h1>
-<div id="thursdays-300" class="section level2">
-<h2>Thursdays 3:00</h2>
-<p><a href="https://zoom.us/j/3094028153">Session 1: 4/9/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 2: 4/16/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 3: 4/23/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 4: 4/30/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 5: 5/7/30</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 6: 5/14/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 7: 5/21/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 8: 5/28/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 9: 6/4/20</a></p>
+</div>
+<div id="hehe" class="section level2">
+<h2>HEHE</h2>
+<div id="thursdays-300" class="section level3">
+<h3>Thursdays 3:00</h3>
+<p><a href="https://zoom.us/j/109660826">Zoom Link</a></p>
+<div id="session-dates" class="section level4">
+<h4>Session Dates</h4>
+<ul>
+<li>Apr 9, 2020 03:00 PM</li>
+<li>Apr 16, 2020 03:00 PM</li>
+<li>Apr 23, 2020 03:00 PM</li>
+<li>Apr 30, 2020 03:00 PM</li>
+<li>May 7, 2020 03:00 PM</li>
+<li>May 14, 2020 03:00 PM</li>
+<li>May 21, 2020 03:00 PM</li>
+<li>May 28, 2020 03:00 PM</li>
+<li>Jun 4, 2020 03:00 PM</li>
+</ul>
 </div>
 </div>
-<div id="prge" class="section level1">
-<h1>PRGE</h1>
-<div id="wednesdays-400" class="section level2">
-<h2>Wednesdays 4:00</h2>
-<p><a href="https://zoom.us/j/3094028153">Initial Consult: 4/8/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 2: 4/15/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 3: 4/22/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 4: 4/29/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 5: 5/6/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 6: 5/13/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 7: 5/20/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 8: 5/27/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 9: 6/3/20</a></p>
+</div>
+<div id="prge" class="section level2">
+<h2>PRGE</h2>
+<div id="wednesdays-400" class="section level3">
+<h3>Wednesdays 4:00</h3>
+<p><a href="https://zoom.us/j/515564429">Initial Consultation Zoom Link</a></p>
 </div>
 </div>
-<div id="drkat" class="section level1">
-<h1>DRKAT</h1>
-<div id="thursdays-100" class="section level2">
-<h2>Thursdays 1:00</h2>
-<p><a href="https://zoom.us/j/3094028153">Initial Consult: 4/9/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 2: 4/16/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 3: 4/23/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 4: 4/30/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 5: 5/7/30</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 6: 5/14/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 7: 5/21/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 8: 5/28/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 9: 6/4/20</a></p>
+<div id="drkat" class="section level2">
+<h2>DRKAT</h2>
+<div id="thursdays-100" class="section level3">
+<h3>Thursdays 1:00</h3>
+<p><a href="https://zoom.us/j/126729794">Initial Consultation Zoom Link</a></p>
 </div>
 </div>
-<div id="chmar" class="section level1">
-<h1>CHMAR</h1>
-<div id="thursdays-1100" class="section level2">
-<h2>Thursdays 11:00</h2>
-<p><a href="https://zoom.us/j/3094028153">Initial Consult: 4/16/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 2: 4/23/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 3: 4/30/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 4: 5/7/30</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 5: 5/14/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 6: 5/21/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 7: 5/28/20</a></p>
-<p><a href="https://zoom.us/j/3094028153">Session 8: 6/4/20</a></p>
+<div id="chmar" class="section level2">
+<h2>CHMAR</h2>
+<div id="thursdays-1100" class="section level3">
+<h3>Thursdays 11:00</h3>
+<p><a href="https://zoom.us/j/745275753">Initial Consultation Zoom Link</a></p>
 </div>
 </div>
 
