--- a/index.html
+++ b/index.html
@@ -1535,7 +1535,7 @@ div.tocify {
 <h2>LICH</h2>
 <div id="wednesdays-200" class="section level3">
 <h3>Wednesdays 2:00</h3>
-<p><a href="https://zoom.us/j/600116955">Zoom Link</a></p>
+<p><a href="https://zoom.us/j/600116955?pwd=SlM0cU13dnZtcDR6dkRXakRvRC9rdz09">Zoom Link</a></p>
 <div id="password" class="section level4">
 <h4>Password</h4>
 <p>268003</p>
@@ -1560,7 +1560,7 @@ div.tocify {
 <h2>HEHE</h2>
 <div id="thursdays-300" class="section level3">
 <h3>Thursdays 3:00</h3>
-<p><a href="https://zoom.us/j/109660826">Zoom Link</a></p>
+<p><a href="https://zoom.us/j/109660826?pwd=Z0JSNjVCTkNZU3doenNUK3NCQ1RCUT09">Zoom Link</a></p>
 <div id="password-1" class="section level4">
 <h4>Password</h4>
 <p>547577</p>
@@ -1585,7 +1585,7 @@ div.tocify {
 <h2>PRGE</h2>
 <div id="wednesdays-400" class="section level3">
 <h3>Wednesdays 4:00</h3>
-<p><a href="https://zoom.us/j/515564429">Initial Consultation Zoom Link</a></p>
+<p><a href="https://zoom.us/j/515564429?pwd=akFQMzFSWHZxS2VOajZBbWZhVWRlUT09">Initial Consultation Zoom Link</a></p>
 <div id="password-2" class="section level4">
 <h4>Password</h4>
 <p>158705</p>
@@ -1596,7 +1596,7 @@ div.tocify {
 <h2>DRKAT</h2>
 <div id="thursdays-100" class="section level3">
 <h3>Thursdays 1:00</h3>
-<p><a href="https://zoom.us/j/126729794">Initial Consultation Zoom Link</a></p>
+<p><a href="https://zoom.us/j/126729794?pwd=ZHRpcUo4dm0raS8vdkZkWXltWjVZQT09">Initial Consultation Zoom Link</a></p>
 <div id="password-3" class="section level4">
 <h4>Password</h4>
 <p>607415</p>
@@ -1607,7 +1607,7 @@ div.tocify {
 <h2>CHMAR</h2>
 <div id="thursdays-1100" class="section level3">
 <h3>Thursdays 11:00</h3>
-<p><a href="https://zoom.us/j/745275753">Initial Consultation Zoom Link</a></p>
+<p><a href="https://zoom.us/j/745275753?pwd=UnR2YkZvRnZDZGdFTEZxY252NFZoUT09">Initial Consultation Zoom Link</a></p>
 <div id="password-4" class="section level4">
 <h4>Password</h4>
 <p>049540</p>
