CHMAR Sessions Added

--- a/index.html
+++ b/index.html
@@ -1579,16 +1579,39 @@ div.tocify {
 </div>
 </div>
 </div>
+<div id="chmar" class="section level2">
+<h2>CHMAR</h2>
+<div id="thursdays-1100" class="section level3">
+<h3>Thursdays 11:00</h3>
+<p><a href="https://zoom.us/j/98802116060?pwd=OFpqZmFaUlFaWWJwbW9wZFdjMUp5dz09">Zoom Link</a></p>
+<div id="password-2" class="section level4">
+<h4>Password</h4>
+<p>049540</p>
+</div>
+<div id="session-dates-1" class="section level4">
+<h4>Session Dates</h4>
+<ul>
+<li>Apr 23, 2020 11:00 AM</li>
+<li>Apr 30, 2020 11:00 AM</li>
+<li>May 7, 2020 11:00 AM</li>
+<li>May 14, 2020 11:00 AM</li>
+<li>May 21, 2020 11:00 AM</li>
+<li>May 28, 2020 11:00 AM</li>
+<li>Jun 4, 2020 11:00 AM</li>
+</ul>
+</div>
+</div>
+</div>
 <div id="hehe" class="section level2">
 <h2>HEHE</h2>
 <div id="thursdays-300" class="section level3">
 <h3>Thursdays 3:00</h3>
 <p><a href="https://zoom.us/j/109660826?pwd=Z0JSNjVCTkNZU3doenNUK3NCQ1RCUT09">Zoom Link</a></p>
-<div id="password-2" class="section level4">
+<div id="password-3" class="section level4">
 <h4>Password</h4>
 <p>547577</p>
 </div>
-<div id="session-dates-1" class="section level4">
+<div id="session-dates-2" class="section level4">
 <h4>Session Dates</h4>
 <ul>
 <li>Apr 9, 2020 03:00 PM</li>
@@ -1609,20 +1632,9 @@ div.tocify {
 <div id="thursdays-100" class="section level3">
 <h3>Thursdays 1:00</h3>
 <p><a href="https://zoom.us/j/126729794?pwd=ZHRpcUo4dm0raS8vdkZkWXltWjVZQT09">Initial Consultation Zoom Link</a></p>
-<div id="password-3" class="section level4">
-<h4>Password</h4>
-<p>607415</p>
-</div>
-</div>
-</div>
-<div id="chmar" class="section level2">
-<h2>CHMAR</h2>
-<div id="thursdays-1100" class="section level3">
-<h3>Thursdays 11:00</h3>
-<p><a href="https://zoom.us/j/745275753?pwd=UnR2YkZvRnZDZGdFTEZxY252NFZoUT09">Initial Consultation Zoom Link</a></p>
 <div id="password-4" class="section level4">
 <h4>Password</h4>
-<p>049540</p>
+<p>607415</p>
 </div>
 </div>
 </div>
