Added PRGE Session

--- a/index.html
+++ b/index.html
@@ -1575,6 +1575,7 @@ div.tocify {
 <li>May 13, 2020 03:00 PM</li>
 <li>May 20, 2020 03:00 PM</li>
 <li>May 27, 2020 03:00 PM</li>
+<li>June 3, 2020 03:00 PM</li>
 </ul>
 </div>
 </div>
