--- a/index.html
+++ b/index.html
@@ -1584,10 +1584,21 @@ div.tocify {
 <h2>DANI</h2>
 <div id="thursdays-1200" class="section level3">
 <h3>Thursdays 12:00</h3>
-<p><a href="https://zoom.us/j/92511044064?pwd=MzlGQjVvUXBVTWFBWm05ckZ2SDBIdz09">Initial Consultation Zoom Link</a></p>
+<p><a href="https://zoom.us/j/97626227659?pwd=NVlEZUxCSHNhK3g1WnhUVnRqemh2QT09">Zoom Link</a></p>
 <div id="password-2" class="section level4">
 <h4>Password</h4>
-<p>404559</p>
+<p>287475</p>
+</div>
+<div id="session-dates-1" class="section level4">
+<h4>Session Dates</h4>
+<ul>
+<li>Apr 30, 2020 12:00 PM</li>
+<li>May 7, 2020 12:00 PM</li>
+<li>May 14, 2020 12:00 PM</li>
+<li>May 21, 2020 12:00 PM</li>
+<li>May 28, 2020 12:00 PM</li>
+<li>Jun 4, 2020 12:00 PM</li>
+</ul>
 </div>
 </div>
 </div>
