--- a/index.html
+++ b/index.html
@@ -1613,8 +1613,8 @@ div.tocify {
 </div>
 </div>
 </div>
-<div id="fola" class="section level2">
-<h2>FOLA</h2>
+<div id="falo" class="section level2">
+<h2>FALO</h2>
 <div id="wednesdays-400" class="section level3">
 <h3>Wednesdays 4:00</h3>
 <p><a href="https://zoom.us/j/93733698036?pwd=L2JwQ244UXpGVG0reWlNSEkyaE1sZz09">Initial Consultation Zoom Link</a></p>
