DRKAT Sessions added

--- a/index.html
+++ b/index.html
@@ -1531,12 +1531,33 @@ div.tocify {
 </div>
 
 
+<div id="drkat" class="section level2">
+<h2>DRKAT</h2>
+<div id="mondays-130" class="section level3">
+<h3>Mondays 1:30</h3>
+<p><a href="https://zoom.us/j/91081074132?pwd=VzNsbGtUVEdVVE9Ka1phN2VCdjY2Zz09">Zoom Link</a></p>
+<div id="password" class="section level4">
+<h4>Password</h4>
+<p>513983</p>
+</div>
+<div id="session-dates" class="section level4">
+<h4>Session Dates</h4>
+<ul>
+<li>May 4, 2020 01:30 PM</li>
+<li>May 11, 2020 01:30 PM</li>
+<li>May 18, 2020 01:30 PM</li>
+<li>May 25, 2020 01:30 PM</li>
+<li>Jun 1, 2020 01:30 PM</li>
+</ul>
+</div>
+</div>
+</div>
 <div id="lich" class="section level2">
 <h2>LICH</h2>
 <div id="wednesdays-200" class="section level3">
 <h3>Wednesdays 2:00</h3>
 <p><a href="https://zoom.us/j/600116955?pwd=SlM0cU13dnZtcDR6dkRXakRvRC9rdz09">Zoom Link</a></p>
-<div id="password" class="section level4">
+<div id="password-1" class="section level4">
 <h4>Password</h4>
 <p>268003</p>
 </div>
@@ -1561,11 +1582,11 @@ div.tocify {
 <div id="wednesdays-300" class="section level3">
 <h3>Wednesdays 3:00</h3>
 <p><a href="https://zoom.us/j/129589622?pwd=SlY3RWRzQlVVQk1KbHpneDlneS8yUT09">Zoom Link</a></p>
-<div id="password-1" class="section level4">
+<div id="password-2" class="section level4">
 <h4>Password</h4>
 <p>074519</p>
 </div>
-<div id="session-dates" class="section level4">
+<div id="session-dates-1" class="section level4">
 <h4>Session Dates</h4>
 <ul>
 <li>Apr 15, 2020 03:00 PM</li>
@@ -1585,11 +1606,11 @@ div.tocify {
 <div id="thursdays-1200" class="section level3">
 <h3>Thursdays 12:00</h3>
 <p><a href="https://zoom.us/j/97626227659?pwd=NVlEZUxCSHNhK3g1WnhUVnRqemh2QT09">Zoom Link</a></p>
-<div id="password-2" class="section level4">
+<div id="password-3" class="section level4">
 <h4>Password</h4>
 <p>287475</p>
 </div>
-<div id="session-dates-1" class="section level4">
+<div id="session-dates-2" class="section level4">
 <h4>Session Dates</h4>
 <ul>
 <li>Apr 30, 2020 12:00 PM</li>
@@ -1599,17 +1620,6 @@ div.tocify {
 <li>May 28, 2020 12:00 PM</li>
 <li>Jun 4, 2020 12:00 PM</li>
 </ul>
-</div>
-</div>
-</div>
-<div id="drkat" class="section level2">
-<h2>DRKAT</h2>
-<div id="thursdays-100" class="section level3">
-<h3>Thursdays 1:00</h3>
-<p><a href="https://zoom.us/j/126729794?pwd=ZHRpcUo4dm0raS8vdkZkWXltWjVZQT09">Initial Consultation Zoom Link</a></p>
-<div id="password-3" class="section level4">
-<h4>Password</h4>
-<p>607415</p>
 </div>
 </div>
 </div>
