DANI schedule change

--- a/index.html
+++ b/index.html
@@ -1603,8 +1603,8 @@ div.tocify {
 </div>
 <div id="dani" class="section level2">
 <h2>DANI</h2>
-<div id="thursdays-1200" class="section level3">
-<h3>Thursdays 12:00</h3>
+<div id="wednesdays-400" class="section level3">
+<h3>Wednesdays 4:00</h3>
 <p><a href="https://zoom.us/j/97626227659?pwd=NVlEZUxCSHNhK3g1WnhUVnRqemh2QT09">Zoom Link</a></p>
 <div id="password-3" class="section level4">
 <h4>Password</h4>
@@ -1613,19 +1613,18 @@ div.tocify {
 <div id="session-dates-2" class="section level4">
 <h4>Session Dates</h4>
 <ul>
-<li>Apr 30, 2020 12:00 PM</li>
-<li>May 7, 2020 12:00 PM</li>
-<li>May 14, 2020 12:00 PM</li>
-<li>May 21, 2020 12:00 PM</li>
-<li>May 28, 2020 12:00 PM</li>
-<li>Jun 4, 2020 12:00 PM</li>
+<li>May 6, 2020 04:00 PM</li>
+<li>May 13, 2020 04:00 PM</li>
+<li>May 20, 2020 04:00 PM</li>
+<li>May 27, 2020 04:00 PM</li>
+<li>Jun 3, 2020 04:00 PM</li>
 </ul>
 </div>
 </div>
 </div>
 <div id="falo" class="section level2">
 <h2>FALO</h2>
-<div id="wednesdays-400" class="section level3">
+<div id="wednesdays-400-1" class="section level3">
 <h3>Wednesdays 4:00</h3>
 <p><a href="https://zoom.us/j/93733698036?pwd=L2JwQ244UXpGVG0reWlNSEkyaE1sZz09">Initial Consultation Zoom Link</a></p>
 <div id="password-4" class="section level4">
