FALO added and LICH removed

--- a/index.html
+++ b/index.html
@@ -1552,27 +1552,23 @@ div.tocify {
 </div>
 </div>
 </div>
-<div id="lich" class="section level2">
-<h2>LICH</h2>
-<div id="wednesdays-200" class="section level3">
-<h3>Wednesdays 2:00</h3>
-<p><a href="https://zoom.us/j/600116955?pwd=SlM0cU13dnZtcDR6dkRXakRvRC9rdz09">Zoom Link</a></p>
+<div id="falo" class="section level2">
+<h2>FALO</h2>
+<div id="tuesdays-1200" class="section level3">
+<h3>Tuesdays 12:00</h3>
+<p><a href="https://zoom.us/j/91899016446?pwd=bm16M3JmTTJKUnJ5RXMvSjZHWDRRUT09">Zoom Link</a></p>
 <div id="password-1" class="section level4">
 <h4>Password</h4>
-<p>268003</p>
+<p>517594</p>
 </div>
-<div id="sesion-dates" class="section level4">
-<h4>Sesion Dates</h4>
+<div id="session-dates-1" class="section level4">
+<h4>Session Dates</h4>
 <ul>
-<li>Apr 8, 2020 02:00 PM</li>
-<li>Apr 15, 2020 02:00 PM</li>
-<li>Apr 22, 2020 02:00 PM</li>
-<li>Apr 29, 2020 02:00 PM</li>
-<li>May 6, 2020 02:00 PM</li>
-<li>May 13, 2020 02:00 PM</li>
-<li>May 20, 2020 02:00 PM</li>
-<li>May 27, 2020 02:00 PM</li>
-<li>Jun 3, 2020 02:00 PM</li>
+<li>May 5, 2020 12:00 PM</li>
+<li>May 12, 2020 12:00 PM</li>
+<li>May 19, 2020 12:00 PM</li>
+<li>May 26, 2020 12:00 PM</li>
+<li>Jun 2, 2020 12:00 PM</li>
 </ul>
 </div>
 </div>
@@ -1586,7 +1582,7 @@ div.tocify {
 <h4>Password</h4>
 <p>074519</p>
 </div>
-<div id="session-dates-1" class="section level4">
+<div id="session-dates-2" class="section level4">
 <h4>Session Dates</h4>
 <ul>
 <li>Apr 15, 2020 03:00 PM</li>
@@ -1610,7 +1606,7 @@ div.tocify {
 <h4>Password</h4>
 <p>287475</p>
 </div>
-<div id="session-dates-2" class="section level4">
+<div id="session-dates-3" class="section level4">
 <h4>Session Dates</h4>
 <ul>
 <li>May 6, 2020 04:00 PM</li>
@@ -1619,17 +1615,6 @@ div.tocify {
 <li>May 27, 2020 04:00 PM</li>
 <li>Jun 3, 2020 04:00 PM</li>
 </ul>
-</div>
-</div>
-</div>
-<div id="falo" class="section level2">
-<h2>FALO</h2>
-<div id="wednesdays-400-1" class="section level3">
-<h3>Wednesdays 4:00</h3>
-<p><a href="https://zoom.us/j/93733698036?pwd=L2JwQ244UXpGVG0reWlNSEkyaE1sZz09">Initial Consultation Zoom Link</a></p>
-<div id="password-4" class="section level4">
-<h4>Password</h4>
-<p>620486</p>
 </div>
 </div>
 </div>
